@@ -6469,3 +6469,7 @@ PACKAGE: 2.2.99.2
 2007-07-02 cjg
  * Fixed problem with searching subjects in input forms. #2962
 
+2007-08-15 cjg
+ * Fixed weird sort of error which didn't fail but should in xhtml_help.
+ * Added support for <title> override in workflow.
+
